--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,10 +40,11 @@ li {
     margin: 5px 0;
     /* padding: 10px; */
     width: 100%;
+    overflow: auto;
 }
 
 li button {
-    margin-left: 5px;;
+    margin-left: 5px;
 }
 
 
@@ -57,6 +58,12 @@ input {
     width: 70%;
     height: 2.0rem;
     font-size: 1.2rem;
+}
+
+.input-editar {
+    padding: 5px;
+    font-size: 1rem;
+    width: 100%;
 }
 
 .btn-tarefa {
